--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rishav-chanda-portfolio",
+  "name": "Shivam Shah protfolio",
   "version": "0.1.0",
-  "homepage": "https://rishavchanda.github.io",
+  
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "brcypt": "^1.0.1",
     "emailjs": "^4.0.2",
     "firebase": "^10.12.2",
     "gh-pages": "^3.2.3",
@@ -24,6 +25,7 @@
     "react-scroll": "^1.8.7",
     "styled-components": "^5.3.5",
     "typewriter-effect": "^2.19.0",
+    "update": "^0.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
