--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Shivam Shah protfolio",
+  "name": "Shivam-shah-protfolio",
   "version": "0.1.0",
-  
+  "homepage": "https://rishavchanda.github.io",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
