--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Shivam-shah-protfolio",
+  "name": "Shivam-Shah-protfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
