--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^1.3.2",
     "brcypt": "^1.0.1",
     "emailjs": "^4.0.2",
     "firebase": "^10.12.2",
